fixed underscore beside image, fb box too small

--- a/views/style.sass
+++ b/views/style.sass
@@ -60,6 +60,10 @@ article h1
   -moz-box-shadow: 3px 3px 6px #000000
   box-shadow: 3px 3px 6px #000000
 
+a img 
+  text-decoration: none
+  border-style: none
+
 img
   border: 0
 
